--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "vue-cli": "^2.9.6",
     "vue-router": "^3.1.5",
     "vuetify": "^2.2.11",
-    "vuex": "^3.1.2"
+    "vuex": "^3.1.2",
+    "vuex-persistedstate": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
