--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue-cli": "^2.9.6",
     "vue-router": "^3.1.5",
     "vuetify": "^2.2.11",
+    "vuetify-google-autocomplete": "^2.0.1",
     "vuex": "^3.1.2",
     "vuex-persistedstate": "^3.0.1"
   },
