--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@babel/polyfill": "^7.4.4",
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "moment": "^2.24.0",
     "register-service-worker": "^1.6.2",
     "v-mask": "^2.1.0",
     "vue": "^2.6.11",
