--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "conta-comigo",
   "version": "0.1.0",
   "engines": {
-    "node": "v11.14.0"
+    "node": "v13.5.0",
+    "npm": "6.14.4"
   },
   "private": true,
   "scripts": {
