--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "front",
   "version": "0.1.0",
   "engines": {
-    "node": "v13.5.0",
-    "npm": "6.14.4"
+    "node": "v11.14.0"
   },
   "private": true,
   "scripts": {
@@ -27,7 +26,6 @@
     "vue-filter-date-format": "^1.3.1",
     "vue-router": "^3.1.5",
     "vuetify": "^2.2.11",
-    "vuetify-google-autocomplete": "^2.0.1",
     "vuex": "^3.1.2",
     "vuex-persistedstate": "^3.0.1"
   },
