--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "postinstall":"if test \"$NODE_ENV\" = \"production\" ; then make install ; fi "
   },
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
