--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vue-carousel": "^0.18.0",
     "vue-cli": "^2.9.6",
     "vue-filter-date-format": "^1.3.1",
+    "vue-native-websocket": "^2.0.14",
     "vue-router": "^3.1.5",
     "vuetify": "^2.2.11",
     "vuetify-google-autocomplete": "^2.0.1",
