--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "v6.11.2"
+    "node": ">=7.6"
   },
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -18,7 +18,7 @@
     "cropperjs": "^1.5.6",
     "express": "^4.17.1",
     "lodash": "^4.17.15",
-    "moment": "^2.24.0",
+    "moment": "^2.25.3",
     "register-service-worker": "^1.6.2",
     "v-mask": "^2.1.0",
     "vue": "^2.6.11",
@@ -26,7 +26,7 @@
     "vue-cli": "^2.9.6",
     "vue-filter-date-format": "^1.3.1",
     "vue-router": "^3.1.5",
-    "vuetify": "^2.2.11",
+    "vuetify": "^2.2.27",
     "vuex": "^3.1.2",
     "vuex-persistedstate": "^3.0.1"
   },
@@ -48,7 +48,7 @@
     "node-sass": "^4.14.1",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.2",
-    "style-loader": "^1.1.3",
+    "style-loader": "^1.2.1",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
     "vue-cli-plugin-vuetify": "~2.0.5",
