--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-vue": "^6.1.2",
+    "fernet": "^0.3.1",
     "node-sass": "^4.14.1",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.2",
