Working on encrypt..

--- a/.env.development.local
+++ b/.env.development.local
@@ -1,2 +1,2 @@
-VUE_APP_BACKEND_ADDRESS="http://apitest.helpmecorona.com/"
+VUE_APP_BACKEND_ADDRESS="http://localhost:8000/"
 VUE_APP_NOTIFICATION_ADDRESS="ws://apitest.helpmecorona.com/ws/frontend?subscribe-user"
