--- a/.github/workflows/front.yml
+++ b/.github/workflows/front.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: Frontend CI
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
@@ -15,19 +15,64 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on: do-conta-comigo-prod-front
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - uses: actions/checkout@v2
+    # - uses: actions/checkout@v2
 
-    # Runs a single command using the runners shell
-    - name: Run a one-line script
-      run: echo Hello, world!
-
-    # Runs a set of commands using the runners shell
-    - name: Run a multi-line script
+    - name: Deploy to production
       run: |
-        echo Add other actions to build,
-        echo test, and deploy your project.
+        npm install
+        if [ $? -ne 0 ];
+        then
+          echo "System has failed to install npm dependencies"
+          exit 1
+        fi
+        
+        npm install dev --prefix $FRONTEND_SOURCE
+
+        if [ $? -ne 0 ];
+        then
+          echo "System has failed to install npm dev dependencies"
+          exit 1
+        fi
+
+        # Create env files
+        
+        VUE_APP_BACKEND_ADDRESS=https://api.contacomigoapp.com.br/
+        VUE_APP_NOTIFICATION_ADDRESS=wss://api.contacomigoapp.com.br/ws/frontend?subscribe-user
+        VUE_APP_SECRET_KEY_PASS=4IaokWbQcl7RnXdmTqnPaYHkV0m3YZiePSqchMAqwHk=
+        
+        cat > .env.production.local <<EOF
+        VUE_APP_BACKEND_ADDRESS=$VUE_APP_BACKEND_ADDRESS
+        VUE_APP_NOTIFICATION_ADDRESS=$VUE_APP_NOTIFICATION_ADDRESS
+        VUE_APP_SECRET_KEY_PASS=$VUE_APP_SECRET_KEY_PASS
+        EOF
+        
+        npm run build
+        
+        if [ $? -ne 0 ];
+        then
+          echo "npm build has failed"
+          exit 1
+        fi
+        
+        FRONTEND_DEPLOY=/opt/conta-comigo/prod/front/deploy/
+        
+        sudo rm -rf "$FRONTEND_DEPLOY/*"
+        
+        if [ $? -ne 0 ];
+        then
+          echo "System has failed to clear directiry $FRONTEND_DEPLOY"
+          exit 1
+        fi
+        
+        cp -r ./dist/* $FRONTEND_DEPLOY/
+        
+        if [ $? -ne 0 ];
+        then
+          echo "System has failed to copy static files to '$FRONTEND_DEPLOY'"
+          exit 1
+        fi
