Fixed test environment

--- a/.env.development.local
+++ b/.env.development.local
@@ -1,4 +1,4 @@
 __VUE_APP_BACKEND_ADDRESS=http://localhost:8000/
-VUE_APP_BACKEND_ADDRESS=http://apitest.helpmecorona.com/
-VUE_APP_NOTIFICATION_ADDRESS=ws://apitest.helpmecorona.com/ws/frontend?subscribe-user
+VUE_APP_BACKEND_ADDRESS=https://apitest.contacomigo.com.br/
+VUE_APP_NOTIFICATION_ADDRESS=wss://apitest.contacomigo.com.br/ws/frontend?subscribe-user
 VUE_APP_SECRET_KEY_PASS=4IaokWbQcl7RnXdmTqnPaYHkV0m3YZiePSqchMAqwHk=
