--- a/.env.test.local
+++ b/.env.test.local
@@ -1,2 +1,2 @@
-VUE_APP_BACKEND_ADDRESS=http://apitest.helpmecorona.com/
-VUE_APP_NOTIFICATION_ADDRESS=ws://apitest.helpmecorona.com/ws/frontend?subscribe-user
+VUE_APP_BACKEND_ADDRESS=https://test.contacomigoapp.com.br/
+VUE_APP_NOTIFICATION_ADDRESS=ws://test.contacomigoapp.com.br/ws/frontend?subscribe-user
