--- a/package.json
+++ b/package.json
@@ -13,22 +13,22 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.4.4",
+    "@babel/polyfill": "^7.10.1",
+    "@vue/cli": "^4.4.1",
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
-    "cropperjs": "^1.5.6",
+    "cropperjs": "^1.5.7",
     "express": "^4.17.1",
     "lodash": "^4.17.15",
-    "moment": "^2.25.3",
+    "moment": "^2.26.0",
     "register-service-worker": "^1.6.2",
-    "v-mask": "^2.1.0",
+    "v-mask": "^2.2.1",
     "vue": "^2.6.11",
     "vue-carousel": "^0.18.0",
-    "vue-cli": "^2.9.6",
     "vue-filter-date-format": "^1.3.1",
-    "vue-router": "^3.1.5",
-    "vuetify": "^2.2.27",
-    "vuex": "^3.1.2",
+    "vue-router": "^3.3.2",
+    "vuetify": "^2.2.32",
+    "vuex": "^3.4.0",
     "vuex-persistedstate": "^3.0.1"
   },
   "devDependencies": {
@@ -48,13 +48,13 @@
     "eslint-plugin-vue": "^6.1.2",
     "fernet": "^0.3.1",
     "node-sass": "^4.14.1",
-    "sass": "^1.19.0",
+    "sass": "^1.26.7",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.2.1",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
     "vue-cli-plugin-vuetify": "~2.0.5",
     "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.3.0"
+    "vuetify-loader": "^1.4.4"
   }
 }
